src/objects/BNF_Approval_Log__c.object
<CustomObject>
    <description>This object will capture Purchase/BNF submission, approval, and rejection events and record the relevant details for reporting purposes.</description>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BNF_Approval_Logs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BNF_Status__c</fullName>
        <label>BNF Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>New_Submission__c</fullName>
        <formula>IF( Re_Submission__c == TRUE,0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Submission</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Purchase_BNF__c</fullName>
        <label>Purchase/BNF</label>
        <referenceTo>BNF2__c</referenceTo>
        <relationshipLabel>BNF Approval Logs</relationshipLabel>
        <relationshipName>BNF_Approval_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Re_Submission__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Re-Submission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>address [0]</fullName>
                </value>
                <value>
                    <fullName>billing date [1]</fullName>
                </value>
                <value>
                    <fullName>billing entity [2]</fullName>
                </value>
                <value>
                    <fullName>billing frequency [3]</fullName>
                </value>
                <value>
                    <fullName>contract period [4]</fullName>
                </value>
                <value>
                    <fullName>customer [5]</fullName>
                </value>
                <value>
                    <fullName>data period [6]</fullName>
                </value>
                <value>
                    <fullName>delivery frequency [7]</fullName>
                </value>
                <value>
                    <fullName>duplicated BNF/Opp [8]</fullName>
                </value>
                <value>
                    <fullName>evidence [9]</fullName>
                </value>
                <value>
                    <fullName>incomplete [10]</fullName>
                </value>
                <value>
                    <fullName>missing documents [11]</fullName>
                </value>
                <value>
                    <fullName>multiple error [12]</fullName>
                </value>
                <value>
                    <fullName>price [13]</fullName>
                </value>
                <value>
                    <fullName>product [14]</fullName>
                </value>
                <value>
                    <fullName>revenue type [15]</fullName>
                </value>
                <value>
                    <fullName>WBS not created [16]</fullName>
                </value>
                <value>
                    <fullName>WBS with errors [17]</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rejection_Reasons_Multi__c</fullName>
        <label>Rejection Reasons</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Return_Time_in_Days__c</fullName>
        <label>Return Time in Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revenue Analyst</label>
        <referenceTo>Revenue_Analyst__c</referenceTo>
        <relationshipLabel>BNF Approval Logs</relationshipLabel>
        <relationshipName>BNF_Approval_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submitter_Business_Unit__c</fullName>
        <formula>text(Submitter__r.Business_Unit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submitter Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitter_Country__c</fullName>
        <formula>TEXT(Submitter__r.User_Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submitter Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BNF_Approval_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>BNF Approval Log</label>
    <nameField>
        <displayFormat>Log-{0000}</displayFormat>
        <label>BNF Approval Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BNF Approval Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>